Add requirements and expand .gitignore
Add a pinned requirements.txt for the ALS-LM data collection stack (requests, biopython, lxml, trafilatura, beautifulsoup4, pubmed-parser, presido/anonymizer, spacy, etc.) to ensure reproducible installs. Update .gitignore to ignore Python artifacts (/*.pyc, __pycache__, venv/.venv) and data collection files/directories (data/raw, data/scrapers, data/sources.*, data/collection.log) to avoid committing large or sensitive data.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@ Thumbs.db
 
 # Planning artifacts
 .planning/
+
+# Python
+*.pyc
+__pycache__/
+venv/
+.venv/
+
+# Data collection
+data/raw/
+data/scrapers/
+data/sources.json
+data/sources.md
+data/collection.log
