--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ tqdm==4.66.2
 presidio-analyzer==2.2.354
 presidio-anonymizer==2.2.354
 spacy==3.7.4
+
+# Corpus processing (Phase 2)
+datasketch==1.9.0
+ftfy==6.3.1
+scikit-learn==1.8.0
