Add corpus statistics generator, pipeline orchestrator, and .gitignore updates
- Implement generate_stats() producing data/stats.md with corpus summary,
  source distribution, train/val split ratios, document length analysis,
  vocabulary analysis, content tier distribution, and rejection summary
- Implement run_pipeline() orchestrating clean -> dedup -> split -> stats
  with stage-level logging, timing, error isolation, and fixed seed
- Add CLI with --raw-dir, --output-dir, --stats-path, --seed, --log-level
- Set up dual-output logging (stdout + file) matching Phase 1 pattern
- Update .gitignore to exclude data/processed/ and data/stats.md
  (data/processing/ source code remains tracked)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ data/scrapers/
 data/sources.json
 data/sources.md
 data/collection.log
+
+# Corpus processing outputs
+data/processed/
+data/stats.md
