Add sweep summary, winning tokenizer selection, and nanoGPT data preparation
- Create prepare_data.py with sweep summary generation and corpus encoding to nanoGPT binary format
- Select als_tokenizer_32k as canonical tokenizer (all candidates identical on sample corpus)
- Generate sweep_summary.md with ranking table, recommendation, and trade-off analysis
- Save winning tokenizer as tokenizer/als_tokenizer.json for downstream use
- Add data/tokenized/ to .gitignore (binary files are regenerable from corpus + tokenizer)

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ data/collection.log
 # Corpus processing outputs
 data/processed/
 data/stats.md
+
+# Tokenized data (Phase 3 - binary files, regenerable from corpus + tokenizer)
+data/tokenized/
