Add v0.2.0 training dependencies and gitignore reports/
- Add deepspeed, ninja, transformers, safetensors, nvidia-ml-py to
  requirements.txt with section headers for model training, export
  pipeline, and GPU monitoring
- Document PyTorch separate installation requirement (needs --index-url
  for CUDA 12.8 support, cannot be expressed in requirements.txt)
- Preserve all 17 existing v0.1.0 data pipeline dependencies unchanged
- Add reports/ to .gitignore for local-only validation artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ data/stats.md
 
 # Tokenized data (Phase 3 - binary files, regenerable from corpus + tokenizer)
 data/tokenized/
+
+# Environment validation reports (Phase 4.1)
+reports/
