--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-# ALS-LM Data Collection Dependencies
-# Pin all versions for reproducibility
-
+# Data collection (v0.1.0)
 requests==2.32.3
 biopython==1.83
 lxml==5.3.0
@@ -11,16 +9,30 @@ pubmed-parser==0.4.1
 pyyaml==6.0.2
 tqdm==4.66.2
 
-# PII scrubbing (needed by Plan 03 for patient narratives)
+# PII scrubbing (v0.1.0)
 presidio-analyzer==2.2.354
 presidio-anonymizer==2.2.354
 spacy==3.7.4
 
-# Corpus processing (Phase 2)
+# Corpus processing (v0.1.0)
 datasketch==1.9.0
 ftfy==6.3.1
 scikit-learn==1.8.0
 
-# Tokenizer training (Phase 3)
+# Tokenizer training (v0.1.0)
 tokenizers==0.22.2
 tiktoken==0.12.0
+
+# Model training (v0.2.0)
+# NOTE: PyTorch must be installed separately with --index-url flag.
+# See setup.sh for correct installation sequence.
+# Do NOT add torch here -- pip install -r does not support per-package index URLs.
+deepspeed==0.18.6
+ninja>=1.11
+
+# Export pipeline (v0.2.0)
+transformers==5.2.0
+safetensors==0.7.0
+
+# GPU monitoring (v0.2.0)
+nvidia-ml-py>=12.0
