--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ data/scrapers/
 data/sources.json
 data/sources.md
 data/collection.log
+data/collection_report.txt
 
 # Corpus processing outputs
 data/processed/
