Fix export pipeline for end-to-end validation
- Fix tokenizer hash computation to use correct llama.cpp test string
- Rewrite _patch_converter_script to insert 'if' block before 'if res
  is None:' guard (converter uses flat if statements, not elif chains)
- Add n_ctx field to HF config.json for llama.cpp GPT2Model compat
- Fix GGUF tokenizer verification to use field.data instead of
  deprecated types_count attribute
- Add sentencepiece and gguf install note to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,5 +34,10 @@ ninja>=1.11
 transformers==5.2.0
 safetensors==0.7.0
 
+# Export (Phase 4.4)
+# NOTE: gguf must be installed from lib/llama.cpp/gguf-py/ (not PyPI) to match
+# the converter script version. Run: pip install lib/llama.cpp/gguf-py/
+sentencepiece>=0.2.0
+
 # GPU monitoring (v0.2.0)
 nvidia-ml-py>=12.0
