--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,6 @@ nvidia-ml-py==13.590.48
 
 # System monitoring (Phase 4.5)
 psutil==7.2.2
+
+# Metrics and monitoring (v0.3.0)
+tensorboard==2.19.0
