Add rapidfuzz dependency and gitignore eval/results/
- Add rapidfuzz==3.14.3 to requirements.txt for fuzzy key-fact matching in evaluation scoring
- Add eval/results/ to .gitignore (generated artifacts, regenerable from checkpoint + benchmark)

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ checkpoints/
 # Export artifacts (Phase 4.4)
 export/output/
 lib/
+
+# Evaluation results (Phase 7.2 - generated artifacts, regenerable from checkpoint + benchmark)
+eval/results/
