Add production training analysis report and update analysis script
- Add --output-dir CLI option to analyze_training.py for custom output paths
- Rename output files to train_val_loss.png and overfitting_report.md
- Update .gitignore to allow reports/production_training_analysis/ commits
- Generate overfitting report from 3-epoch 500M production training run
- All 24 validation checkpoints classified as Well-fit (gap ratio +0.42%)

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,9 @@ data/stats.md
 # Tokenized data (Phase 3 - binary files, regenerable from corpus + tokenizer)
 data/tokenized/
 
-# Environment validation reports (Phase 4.1)
-reports/
+# Environment validation reports (Phase 4.1), except production training analysis (committed deliverable)
+reports/*
+!reports/production_training_analysis/
 
 # Training artifacts (Phase 4.3)
 logs/
