Add multi-model Ollama orchestration to run_evaluation.py and extend taxonomy
- Add --ollama-model, --ollama-url, --temperature flags to run_evaluation.py
- Add extract_model_id() to handle both checkpoint paths and Ollama tags
- Route generate stage through Ollama with --resume when in Ollama mode
- Create per-model output directories (results/{id}/, reports/eval/{id}/)
- Add is_coherent early-exit check to classify_taxonomy.py for degenerate mode
- Add !reports/eval/ exception to .gitignore for committed deliverables

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ data/tokenized/
 # Environment validation reports (Phase 4.1), except production training analysis (committed deliverable)
 reports/*
 !reports/production_training_analysis/
+!reports/eval/
 
 # Training artifacts (Phase 4.3)
 logs/
